Revision history for Acme-CPANAuthors-British

0.06    08/04/2012
	- added missing test pre-requisite, IO::File.

0.05    06/04/2012
	- fixed CPANTS tests.
	- added META.json and test script.

0.04    04/11/2010
	- fixed skip count and updated pingtest for 11companies.t.

0.03    31/10/2010
	- revised pingtest.
	- added CJK, CYCLES, SKX and XEONTIME as British authors.

0.02    09/12/2009
	- added DOTTK as a British Company (RT#51438, thanks DAXIM).

0.01    10/11/2009
        First version, released because no-one else dared!
